--- a/preview/printTemplate.html
+++ b/preview/printTemplate.html
@@ -2,7 +2,6 @@
   <head>
 	  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>iscs_frontEnd:打印模板</title>
-		
 		<link href="toc/style/github-bf51422f4bb36427d391e4b75a1daa083c2d840e.css" media="all" rel="stylesheet" type="text/css"/>
 		<link href="toc/style/github2-d731afd4f624c99a4b19ad69f3083cd6d02b81d5.css" media="all" rel="stylesheet" type="text/css"/>
 		<link href="toc/css/zTreeStyle/zTreeStyle.css" media="all" rel="stylesheet" type="text/css"/>
@@ -199,6 +198,7 @@
 <td>templateDetailUkid</td>
 <td>模板从表主键</td>
 <td>double</td>
+<td>模板从表主键</td>
 </tr>
 <tr>
 <td>templateUkid</td>
@@ -271,7 +271,6 @@
 <td>字号</td>
 <td>double</td>
 <td>数值型 单位pt 缺省值9 可以为小数</td>
-<td></td>
 </tr>
 <tr>
 <td>itemFontColor</td>
