--- a/preview/printTemplate.html
+++ b/preview/printTemplate.html
@@ -110,12 +110,6 @@
 <td>模板主键</td>
 </tr>
 <tr>
-<td>templateCode</td>
-<td>模板编码</td>
-<td>string</td>
-<td>模板编码</td>
-</tr>
-<tr>
 <td>templateName</td>
 <td>模板名称</td>
 <td>string</td>
@@ -134,7 +128,7 @@
 <td>运输商</td>
 </tr>
 <tr>
-<td>shopId</td>
+<td>shopIds</td>
 <td>店铺ID</td>
 <td>int</td>
 <td>店铺</td>
