--- a/preview/printTemplate.html
+++ b/preview/printTemplate.html
@@ -281,7 +281,7 @@
 <td>itemClass</td>
 <td>打印项对象类型</td>
 <td>int</td>
-<td>2:普通文本<br> 31:矩形<br>32:实心矩形<br>33:椭圆<br> 34: 实心椭圆<br> 4:Htm超文本<br>8:图像<br>9:条码<br></td>
+<td>2:普通文本<br> 31:矩形<br>32:实心矩形<br>33:椭圆<br> 34: 实心椭圆<br> 35:直线<br>4:Htm超文本<br>8:图像<br>9:条码<br></td>
 </tr>
 <tr>
 <td>itemName</td>
